--- a/CinemaTicket/Views/MovieManage/Create.cshtml
+++ b/CinemaTicket/Views/MovieManage/Create.cshtml
@@ -14,6 +14,7 @@
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <!--隐藏ID字段，因为是自增的-->
         <div class="form-group" style="display:none">
             @Html.LabelFor(model => model.id, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
