--- a/CinemaTicket/Content/movie-index.css
+++ b/CinemaTicket/Content/movie-index.css
@@ -9,7 +9,6 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 }
 
 body{
-	margin-left: 20px;
 	font-family: "楷体";
 }
 
@@ -17,7 +16,7 @@ body{
 .search{
 	margin-top: 50px;
 }
-.search input {
+.search input[type=search] {
   width: 230px;
   height: 40px;
   padding-left: 10px;
@@ -27,10 +26,10 @@ body{
   background: #F9F0DA;
   color: #9E9C9C;
 }
-.search button {
+.search input[type=submit] {
   position:relative; 
   top: 1px;
-  left: -60.5px;
+  left: -59.5px;
   width: 50px;
   height: 40px;
   border: none;
