--- a/CinemaTicket/Views/Movie/Index.cshtml
+++ b/CinemaTicket/Views/Movie/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CinemaTicket.Models.MovieModels
+﻿@model IEnumerable<CinemaTicket.Models.MovieModels>
 
 @{
     ViewBag.Title = "Index";
@@ -7,8 +7,8 @@
 
 <div id="all">
     <div class="search">
-        <form method="get" action="@Url.Action("Index")" data-movie-ajax="true" data-movie-target="#moviesList">
-            <input type="search" placeholder="输入电影名称...">
+        <form method="get"  action="@Url.Action("Index")" data-movies-ajax="true" data-movies-target="#moviesList">
+            <input type="search" name="searchString" data-movies-autocomplete="@Url.Action("AutoComplete")" placeholder="输入电影名称..." autocomplete="off">
             <input type="submit" value="搜索">
         </form>
     </div>
@@ -18,123 +18,41 @@
         <br />
         <br />
         <span class="tagName">类型：</span>
-        <ul class="typeTags type">
-            <li>
-                <a class="active" href="#">全部</a>
-            </li>
-            <li>
-                <a href="#">动作</a>
-            </li>
+            <ul class="typeTags type">
+                <li>
+                    <a class="active" onclick="typeSearch(null,'type');">全部</a>
+                </li>
+                @foreach (var item in ViewBag.movieType)
+                {
+                    <li>
+                        <a onclick="typeSearch('@item','type');" >@item</a>
+                    </li>
+                }
 
-        </ul>
-        <br />
-        <br />
-        <br />
-        <span class="tagName">地区：</span>
-        <ul class="typeTags area">
-            <li>
-                <a class="active" href="#">全部</a>
-            </li>
-            <li>
-                <a href="#">欧美</a>
-            </li>
+            </ul>
+            <br />
+            <br />
+            <br />
+            <span class="tagName">地区：</span>
+            <ul class="typeTags area">
+                <li>
+                    <a class="active" onclick="typeSearch(null,'area');">全部</a>
+                </li>
+                @foreach (var item in ViewBag.movieArea)
+                {
+                    <li>
+                        <a onclick="typeSearch('@item','area');">@item</a>
+                    </li>
+                }
 
-        </ul>
+            </ul>
 
 
-    </div>
+</div>
     <br />
     <br />
     <div id="movieList">
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/mizhan.jpg" width="190" height="280" />
-                <br />
-                <span>密战</span>
-            </a>
-        </div>
-
-        <div class="movie">
-            <a href="#">
-                <img src="~/img/leishen.jpg" width="190" height="280" />
-                <br />
-                <span>雷神</span>
-            </a>
-        </div>
-
-
+        @Html.Partial("_Movies", Model)
     </div>
 
     <div id="page">
