电影信息页面

--- a/CinemaTicket/Views/Movie/Index.cshtml
+++ b/CinemaTicket/Views/Movie/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CinemaTicket.Models.MovieModels>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "首页";
     Layout = "~/Views/Shared/_Layout - Movie.cshtml";
 }
 
