--- a/CinemaTicket/Content/Site.css
+++ b/CinemaTicket/Content/Site.css
@@ -5,6 +5,7 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
+    padding-top:30px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
