增加影院选择页面

--- a/CinemaTicket/Views/Movie/MovieInfo.cshtml
+++ b/CinemaTicket/Views/Movie/MovieInfo.cshtml
@@ -53,11 +53,11 @@
                     <td>@Html.DisplayFor(modelItem => item.releaseTime)</td>
                 </tr>
             </table>
+            <a href="~/Movie/selectCinema/?id=@Html.DisplayFor(modelItem => item.id)&name=@Html.DisplayFor(modelItem => item.name)" id="selectCinema">
+                选择影院
+            </a>
         }
             
-    <a href="#" id="selectCinema">
-        选择影院
-    </a>
 </div>
 
 <!--
