--- a/CinemaTicket/Views/Movie/_Movies.cshtml
+++ b/CinemaTicket/Views/Movie/_Movies.cshtml
@@ -1,6 +1,5 @@
 ﻿@model IEnumerable<CinemaTicket.Models.MovieModels>
-   
-<div id="moviesList">
+<div id="movieList">
     @foreach (var item in Model)
     {
         <div class="movie">
