--- a/CinemaTicket/Views/Movie/Index.cshtml
+++ b/CinemaTicket/Views/Movie/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div id="all">
     <div class="search">
-        <form method="get"  action="@Url.Action("Index")" data-movies-ajax="true" data-movies-target="#moviesList">
+        <form method="get"  action="@Url.Action("Index")" data-movies-ajax="true" data-movies-target="#movieList">
             <input type="search" name="searchString" data-movies-autocomplete="@Url.Action("AutoComplete")" placeholder="输入电影名称..." autocomplete="off">
             <input type="submit" value="搜索">
         </form>
@@ -51,11 +51,7 @@
 </div>
     <br />
     <br />
-    <div id="movieList">
         @Html.Partial("_Movies", Model)
-    </div>
-
     <div id="page">
     </div>
-
 </div>
