--- a/CinemaTicket/Views/Movie/selectCinema.cshtml
+++ b/CinemaTicket/Views/Movie/selectCinema.cshtml
@@ -18,6 +18,7 @@
     <table id="headInfo">
         <tr>
             <td>@Html.DisplayFor(modelItem => item.name)</td>
+            <td id="movieID" style="display:none;">@Html.DisplayFor(modelItem => item.id)</td>
         </tr>
         <tr>
             <td>@Html.DisplayFor(modelItem => item.type)</td>
