--- a/CinemaTicket/Views/Home/Contact.cshtml
+++ b/CinemaTicket/Views/Home/Contact.cshtml
@@ -1,17 +1,9 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>联系我们</h2>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>电子邮件:</strong>   <a href="mailto:longlou.d@foxmail.com">longlou.d@foxmail.com</a><br />
+    <strong>电话号码:</strong> <a href="#">020-87818110</a>
 </address>
